# ris-gates

./: .editorconfig  .gitignore  .xo-config.json  CODE_OF_CONDUCT.md  LICENSE.txt  README.md  canvas.ts  cli  index.css  index.html  index.ts  input.ts  lib.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  transform-matrix.wls  tsconfig.json  vite.config.ts
.github/workflows/: ci.yaml  deploy.yaml
eval-wasm/: Cargo.toml
eval-wasm/src/: assert.rs  eval.rs  lib.rs  log.rs  ptr.rs  types.rs
input/: pointer.ts  touch.ts  wheel.ts
lib/: assert.ts  node.ts  search-mode.ts  tile-type.ts  tree.ts  walk.ts
lint/: index.js  package.json  pnpm-lock.yaml  tsconfig.json
lint/rules/: explained-casts.js  global-matchall.js  import-preference.js  no-object-literals.js  type-only-imports.js
src/: cli.ts  colors.ts  constants.ts  eval.ts  index.ts  selection.ts  storage.ts  tree.ts  vite-env.d.ts
src/component/: auto-save.ts  canvas.ts  controls.ts  dialogs.ts  eval.ts  grid.ts  index.ts  keyboard.ts  mode.ts  page.ts  pointer.ts  renderer.ts  rendering.ts  selection.ts  storage.ts  theme.ts  tree.ts  version.ts  wheel.ts
src/component/dialog/: assert.ts  browse.ts  copy-failed.ts  entry.ts  epilepsy.ts  incompatible.ts  index.ts  load-failed.ts  load.ts  menu.ts  monitor.ts  paste-failed.ts  save-failed.ts  save.ts  screenshot.ts  selection.ts  sequence-failed.ts  sequence.ts
src/component/hud/: automated.ts  edit.ts  eval-toggle.ts  eval.ts  index.ts  menu.ts  paste-toggle.ts  paste.ts  pick.ts  selection.ts
src/input/: canvas.ts  controls.ts  dialogs.ts  dom-event-options.ts  page.ts  pointer.ts  wheel.ts
src/lib/: aabb.ts  assert.ts  bigint.ts  clipboard.ts  colors.ts  compress.ts  constants.ts  dom.ts  eval-js.ts  eval-opt.ts  eval-wasm.ts  eval.ts  floating-bigint.ts  generator.ts  map-and-set.ts  node.ts  point.ts  pool.ts  ring.ts  schematic.ts  search-mode.ts  sequencer.ts  svg-canvas.ts  tile-type.ts  timer.ts  tree.ts
